unpackaged/main/default/objects/SFDC_Purchase_Order__c/SFDC_Purchase_Order__c.object-meta.xml
<CustomObject>
    <description>The Purchase Order is an order to a vendor comprised of Line Items all going to one shipping location.</description>
    <label>Purchase Order</label>
    <nameField>
        <displayFormat>PO{00000}</displayFormat>
        <label>Purchase Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>