unpackaged/main/default/objects/SFDC_Purchase_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>R00N30000001NaBGEA0</relationshipName>
    <type>Lookup</type>
</CustomField>