unpackaged/main/default/objects/SFDC_Purchase_Order__c/fields/Expedite__c.field-meta.xml
<CustomField>
    <fullName>Expedite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expedite</label>
    <type>Checkbox</type>
</CustomField>