unpackaged/main/default/objects/SFDC_Purchase_Order__c/fields/Ship_To_Location__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Location__c</fullName>
    <label>Ship-To Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate - San Francisco</fullName>
            </value>
            <value>
                <fullName>New York Office</fullName>
            </value>
            <value>
                <fullName>Chicago Office</fullName>
            </value>
            <value>
                <fullName>Denver Office</fullName>
            </value>
            <value>
                <fullName>Seattle Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>