unpackaged/main/default/objects/SFDC_Purchase_Order__c/listViews/AllPOs.listView-meta.xml
<ListView>
    <fullName>AllPOs</fullName>
    <columns>NAME</columns>
    <columns>PO_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Ship_To_Location__c</columns>
    <columns>PO_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All POs</label>
</ListView>