unpackaged/main/default/objects/SFDC_Purchase_Order__c/listViews/NewPOs_d_2.listView-meta.xml
<ListView>
    <fullName>NewPOs_d_2</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>PO_Amount__c</columns>
    <columns>Status__c</columns>
    <columns>PO_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New PO's</label>
</ListView>